--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   padding: 32px 68px;
 }
+svg,
+button {
+  cursor: pointer;
+}
 a {
   text-decoration: none;
 }
@@ -52,6 +56,7 @@ nav {
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  margin-right: 0.5rem;
 }
 .user-card-profile {
   height: 40px;
@@ -84,12 +89,13 @@ nav {
   gap: 1rem;
   max-width: 25rem;
   margin: 0 auto;
+  padding-top: 4rem;
 }
 .login-container input {
   padding: 10px;
 }
 .login-submit-btn {
-  width: 23rem;
+  /* width: 23rem; */
   background: green;
   color: white;
   padding: 0.5rem;
@@ -119,7 +125,7 @@ nav {
   width: 100%;
 }
 .heading {
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 .modal-content img {
@@ -166,5 +172,9 @@ nav {
   border: 1px solid black;
   border-radius: 6px;
   padding: 1rem;
+  display: flex;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
